# df-font-generator

./: .gitignore  README.md  cp1251_terminus_14_bold.py  cp852_terminus_14_bold.py  cp857_terminus_14_bold_nb.py  cp866_terminus_14_bold.py  cp866r_terminus_14_bold_mo.py  cp866u_terminus_14_bold.py  curses_generator.py  font_generator.py  latin3_terminus_14_bold.py  latin3_terminus_14_bold_mo.py  lucida_12.py  pyproject.toml  terminus_12.py  terminus_14_bold.py  ubuntu_14.py  viscii_terminus_14_bold_nb.py
.github/: dependabot.yml
.github/workflows/: lint.yml
df_font_generator/: font_generator.py
