[tool.poetry]
name = "df-font-generator"
version = "0.1.0"
description = ""
authors = ["sheverniskiy <mahahuha@ya.ru>", "insolor <insolor@gmail.com>"]
readme = "README.md"
packages = [{include = "df_font_generator"}]

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^10.3.0"
alternative-encodings = {version = "^0.2.2", source = "dfint"}

[[tool.poetry.source]]
name = "dfint"
url = "https://dfint.github.io/pypi-index/"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
