[tool.poetry]
name = "df-font-generator"
version = "0.1.0"
description = ""
authors = ["sheverniskiy <mahahuha@ya.ru>", "insolor <insolor@gmail.com>"]
readme = "README.md"
packages = [{include = "df_font_generator"}]

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^11.2.1"
alternative-encodings = {version = "^0.3.1", source = "dfint"}

[[tool.poetry.source]]
name = "dfint"
url = "https://dfint.github.io/pypi-index/"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
