[project]
name = "df-font-generator"
version = "0.1.0"
description = ""
authors = [
    { name = "sheverniskiy", email = "mahahuha@ya.ru" },
    { name = "insolor", email = "insolor@gmail.com" },
]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "pillow>=11.3.0,<12",
    "alternative-encodings>=0.3.1,<0.4",
]

[dependency-groups]
dev = ["ruff>=0.12.7,<0.13"]

[tool.uv]

[[tool.uv.index]]
name = "dfint"
url = "https://dfint.github.io/pypi-index/"
explicit = true

[tool.uv.sources]
alternative-encodings = { index = "dfint" }
